# labeling

./: .gitlab-ci.yml  Makefile  README.md  app.py  config.json  pyproject.toml
.gitlab-ci/: labeling-deploy.yml  labeling.yml
data/: metadata.jsonl
deployments/base/labeling/: kustomization.yaml
deployments/base/labeling/manifests/: labeling.deploy.yaml  labeling.service-monitor.yaml  labeling.service.yaml
deployments/envs/prod/conny-hz/labeling/: kustomization.yaml
deployments/envs/staging/conny/labeling/: kustomization.yaml
labeling/: __init__.py  annotator.py  app.py  cli.py  defaults.py  hf_model.py  html.py  label.py  model.py  preprocess.py  pytorch_model.py  samplers.py  serialization.py  utils.py  version.py
notebooks/: model.ipynb  sandbox.ipynb
